--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@color/brownn"
     tools:context=".SplashActivity">
 
 
@@ -21,10 +21,10 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-
+                android:background="@color/black"
                 android:padding="@dimen/_10sdp"
                 android:text="@string/all_recipes"
-                android:textColor="@color/black"
+                android:textColor="@color/white"
                 android:textSize="@dimen/_20ssp" />
 
             <androidx.cardview.widget.CardView
@@ -56,26 +56,26 @@
                 android:layout_margin="@dimen/_10sdp"
                 android:orientation="horizontal"
                 tools:itemCount="1"
-                tools:listitem="@layout/item_rv_main_category" />
+                tools:listitem="@layout/item_main_category" />
 
             <TextView
+                android:id="@+id/tvCategory"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
 
+                android:layout_height="wrap_content"
                 android:paddingStart="@dimen/_10sdp"
                 android:text="@string/category_name"
-                android:id="@+id/tvCategory"
-                android:textColor="@color/black"
+                android:textColor="@color/white"
                 android:textSize="@dimen/_15ssp" />
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rv_sub_category"
+                android:id="@+id/sub_category"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/_10sdp"
                 android:orientation="vertical"
                 tools:itemCount="1"
-                tools:listitem="@layout/item_rv_sub_category" />
+                tools:listitem="@layout/item_sub_category" />
 
 
         </LinearLayout>
