--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="black">#FF000000</color>
     <color name="transparent">#00000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="brownn">#321E1E</color>
     <color name="pink">#F6DEDE</color>
     <color name="youtube">#C64141</color>
     <color name="gray">#f5f5f5</color>
